--- a/mail/index.html
+++ b/mail/index.html
@@ -8,7 +8,11 @@
   <title>Document</title>
 </head>
 <body>
+
+    <h1>ACCESSO CONSENTITO?</h1>
+
+  <h2></h2>
   
-  <script src="assets/js/script.js"></script>
+  <script src="assets\js\script.js"></script>
 </body>
 </html>
