--- a/dadi/index.html
+++ b/dadi/index.html
@@ -8,7 +8,12 @@
   <title>Document</title>
 </head>
 <body>
+
+  <button>Premi per giocare</button>
   
-  <script src="assets/js/script.js"></script>
+  <h1>IL VINCITORE È:</h1>
+  <h2></h2>
+
+  <script src="assets\js\script.js"></script>
 </body>
 </html>
